--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-color: yellow;
+            background-color: #FFEB00;
             height: 100vh;
             display: flex;
             justify-content: center;
